tests/snapshots/tui_board_test__all_columns_hidden.snap
---
source: tests/tui_board_test.rs
expression: "(vm.columns.len(), &vm.column_toggles)"
---
(
    0,
    "[ ][ ][ ][ ][ ]",
)
