tests/snapshots/tui_board_test__board_search.snap
---
source: tests/tui_board_test.rs
expression: "(&vm.search.query, vm.search.is_focused, vm.search.result_count,\nvm.total_filtered_tickets, vm.total_all_tickets)"
---
(
    "bug",
    true,
    2,
    2,
    3,
)
