tests/snapshots/tui_board_test__board_search_no_results.snap
---
source: tests/tui_board_test.rs
expression: "(&vm.empty_state, vm.total_filtered_tickets, vm.total_all_tickets)"
---
(
    Some(
        NoSearchResults,
    ),
    0,
    2,
)
