tests/snapshots/tui_board_test__hidden_columns.snap
---
source: tests/tui_board_test.rs
expression: "(visible_columns, &vm.column_toggles)"
---
(
    [
        "NEW",
        "COMPLETE",
    ],
    "[N][ ][ ][C][ ]",
)
