tests/snapshots/tui_board_test__multiple_tickets_per_column.snap
---
source: tests/tui_board_test.rs
expression: column_counts
---
[
    (
        "NEW",
        3,
    ),
    (
        "NEXT",
        0,
    ),
    (
        "IN PROGRESS",
        2,
    ),
    (
        "COMPLETE",
        1,
    ),
    (
        "CANCELLED",
        0,
    ),
]
