tests/snapshots/tui_board_test__nav_right_twice.snap
---
source: tests/tui_board_test.rs
expression: "(state.current_column, state.current_row)"
---
(
    2,
    0,
)
