tests/snapshots/tui_board_test__nav_with_row_adjustment.snap
---
source: tests/tui_board_test.rs
expression: "(state.current_column, state.current_row)"
---
(
    1,
    0,
)
