tests/snapshots/tui_board_test__no_janus_dir.snap
---
source: tests/tui_board_test.rs
expression: "(&vm.empty_state, vm.total_all_tickets)"
---
(
    Some(
        NoJanusDir,
    ),
    0,
)
